pod_security/bad_pod_with_hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-hostpath
spec:
  containers:
  - name: ubuntu
    image: ubuntu
    command:
      - "sleep"
      - "604800"
    volumeMounts:
    - name: host-volume
      mountPath: /host  
  volumes:
  - name: host-volume
    hostPath:
      path: /
