pod_security/deployment_non_root_user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      # securityContext:
      #   runAsUser: 1000
      #   runAsGroup: 1000
      containers:
      - name: my-app
        image: ubuntu
        command:
          - "sleep"
          - "604800"
