pod_security/pod_nginx_with_hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-hostpath
  labels:
    app: ubuntu
spec:
  containers:
  - image: ubuntu
    name: ubuntu
    command:
      - "sleep"
      - "604800"
    volumeMounts:
      - mountPath: /var/log/nginx
        name: log-nginx
        readOnly: true
  volumes:
  - name: log-nginx
    hostPath:
      #path: /
      path: /var/log/nginx
