pod_security/pod_privileged_psa.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-psa-pod
  labels:
    app: ubuntu
spec:
  containers:
  - image: ubuntu
    securityContext:
      privileged: true
      runAsUser: 0
    command:
      - "sleep"
      - "604800"
    imagePullPolicy: IfNotPresent
    name: ubuntu
