pod_security/pod_service_discovery.yaml
apiVersion: v1
kind: Pod
metadata:
  name: service-discovery-pod
  labels:
    app: ubuntu
spec:
  containers:
  - image: ubuntu
    command:
      - "sleep"
      - "604800"
    imagePullPolicy: IfNotPresent
    name: ubuntu
  # dnsPolicy: Default # "Default" is not the true default value
  # enableServiceLinks: false
