pod_security/pod_with_resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-ressource-mem-cpu
  namespace: development
spec:
  containers:
  - name: myapp-container
    image: busybox:1.28
    command: ['sh', '-c', 'echo The app is running! && sleep 3600']
    # resources:
    #   limits:
    #     memory: 2G
    #     cpu: 1
